// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotSteps renders correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-1.emotion-1 {
  margin-right: 8px;
}

.emotion-2 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: grey;
  cursor: pointer;
}

.emotion-2.emotion-2 {
  margin-right: 0;
}

<div
  className="sui-box emotion-0"
>
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-2"
    onClick={[Function]}
  />
</div>
`;

exports[`DotSteps renders correctly useState function 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: grey;
  cursor: pointer;
}

.emotion-1.emotion-1 {
  margin-right: 8px;
}

.emotion-2 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-2.emotion-2 {
  margin-right: 8px;
}

.emotion-10 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: grey;
  cursor: pointer;
}

.emotion-10.emotion-10 {
  margin-right: 0;
}

<div
  className="sui-box emotion-0"
>
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-2"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-10"
    onClick={[Function]}
  />
</div>
`;

exports[`DotSteps renders correctly wit 10 steps, default step=4 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: grey;
  cursor: pointer;
}

.emotion-1.emotion-1 {
  margin-right: 8px;
}

.emotion-4 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-4.emotion-4 {
  margin-right: 8px;
}

.emotion-10 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: grey;
  cursor: pointer;
}

.emotion-10.emotion-10 {
  margin-right: 0;
}

<div
  className="sui-box emotion-0"
>
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-4"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-1"
    onClick={[Function]}
  />
  <div
    className="sui-box emotion-10"
    onClick={[Function]}
  />
</div>
`;
